; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/direct/extr_chdrive.c__chdrive.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/direct/extr_chdrive.c__chdrive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const._chdrive.buffer = private unnamed_addr constant [3 x i32] [i32 65, i32 58, i32 0], align 4
@EACCES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_chdrive(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca [3 x i32], align 4
  store i32 %0, i32* %3, align 4
  %5 = bitcast [3 x i32]* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %5, i8* align 4 bitcast ([3 x i32]* @__const._chdrive.buffer to i8*), i64 12, i1 false)
  %6 = load i32, i32* %3, align 4
  %7 = sub nsw i32 %6, 1
  %8 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 0
  %9 = load i32, i32* %8, align 4
  %10 = add nsw i32 %9, %7
  store i32 %10, i32* %8, align 4
  %11 = getelementptr inbounds [3 x i32], [3 x i32]* %4, i64 0, i64 0
  %12 = call i32 @SetCurrentDirectoryW(i32* %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %23, label %14

14:                                               ; preds = %1
  %15 = call i32 (...) @GetLastError()
  %16 = call i32 @_dosmaperr(i32 %15)
  %17 = load i32, i32* %3, align 4
  %18 = icmp sle i32 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %14
  %20 = load i32, i32* @EACCES, align 4
  %21 = call i32 @_set_errno(i32 %20)
  br label %22

22:                                               ; preds = %19, %14
  store i32 -1, i32* %2, align 4
  br label %24

23:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %24

24:                                               ; preds = %23, %22
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @SetCurrentDirectoryW(i32*) #2

declare dso_local i32 @_dosmaperr(i32) #2

declare dso_local i32 @GetLastError(...) #2

declare dso_local i32 @_set_errno(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
